--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_EMAILJS_USERID=user_qYVbsfdo8ncuutijFzhMC
 REACT_APP_EMAILJS_SERVICE_ID=service_urfbf8t
+REACT_APP_NOTFOUND=//aquavitality.com/wp-content/themes/aquavitae/assets/images/image-not-found.png
